--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,155 @@
-* {
   
-  box-sizing: border-box;
+    
+
+.content-container{
+  background-color: greenyellow;
+ 
 }
+.navbar { 
+   display: flex;
+   justify-content: center;
+   font-size: 30px;
+   position: sticky;  
+}
+.navbar>   h1{
+  color: aqua;
+}
+.navbar-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+}
+
+.navbar-logo{
+    color:black;
+    justify-self: start;
+    cursor : pointer;
+    font-size: 2.2rem; 
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 30px;
+  list-style: none;
+ 
+  width: 72vw;
+  justify-content: right;
+  margin-right: 2rem;
+  margin-left: 200px;
+}
+
+.nav-item {
+    height: 70px;
+  }
   
-li {
-  list-style-type: none;
-}
+  .nav-links {
+    color: black;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+   margin-left: 15px;
+    height: 50%;
+  }
 
-a {
-  text-decoration: none;
-}
+  nav-links:hover {
+    border-bottom: 4px solid #fff;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .fa-bars {
+    color: #fff;
+  }
+  
+  .nav-links-mobile {
+    display: none;
+  }
+  
+  .menu-icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 960px) {
+    .NavbarItems {
+      position: relative;
+    }
+  
+    .nav-menu {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 90vh;
+      position: absolute;
+      top: 80px;
+      left: -100%;
+      opacity: 1;
+      transition: all 0.5s ease;
+    }
+  
+    .nav-menu.active {
+      background: #242222;
+      left: 0;
+      opacity: 1;
+      transition: all 0.5s ease;
+      z-index: 1;
+    }
+  
+    .nav-links {
+      text-align: center;
+      padding: 2rem;
+      width: 100%;
+      display: table;
+    }
+  
+    .nav-links:hover {
+      background-color: #fff;
+      color: #242424;
+      border-radius: 0;
+    }
+  
+    .navbar-logo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate(25%, 50%);
+    }
+  
+    .menu-icon {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      transform: translate(-100%, 60%);
+      font-size: 1.8rem;
+      cursor: pointer;
+    }
+  
+    .fa-times {
+      color: #fff;
+      font-size: 2rem;
+    }
+  
+    .nav-links-mobile {
+      display: block;
+      text-align: center;
+      margin: 2rem auto;
+      border-radius: 4px;
+      width: 80%;
+      text-decoration: none;
+      font-size: 1.5rem;
+      background-color: transparent;
+      color: #fff;
+      padding: 14px 20px;
+      border: 1px solid #fff;
+      transition: all 0.3s ease-out;
+    }
+  
+    .nav-links-mobile:hover {
+      background: #fff;
+      color: #242424;
+      transition: 250ms;
+    }
 
-nav {
-  display: flex;
-  justify-content: space-around ;
-  align-items: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  background-color:wheat;
-}
-
-nav .logo {
-  font-size: 18px;
-  text-transform: uppercase;
-}
-
-nav .nav-links{
-  display: flex;
-  justify-content: space-around;
-  width: 30%;
-}
-
-nav .nav-links a {
-  font-size: 18px;
-}
+    
+  }
